# RustCodeVisualizer

./: .gitignore  Cargo.toml  README.md
example/: graph.dot  run.sh  structures.rs
src/: funcs.rs  impls.rs  lib.rs  structures.rs
