[package]
name = "rust_code_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0"
petgraph = "0.6.0"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true

[profile.release]
opt-level = 3
debug = false
