[package]
name = "rust_code_visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Stepanidenko <dimitrij.stepanidenko AT google mail .com>"] 
description = """
A library and CLI tool for graphical representation of Rust code, focusing on visualizing the relationships between structs and enums.
"""
repository = "https://github.com/dmitriiStepanidenko/RustCodeVisualizer"
readme = "README.md"


[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0"
petgraph = "0.6.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
